--- a/connect2censusnew.ipynb
+++ b/connect2censusnew.ipynb
@@ -211,7 +211,7 @@
    ],
    "source": [
     "%%R\n",
-    "census_api_key(\"2223e1ac56772e64817967eab5c4e921c49cf043\")"
+    "census_api_key(\"")"
    ]
   },
   {
